# htslib

./: .gitignore  CMakeLists.txt  Makefile  NEWS  _dlfcn.c  _getopt.c  _time.c  _time.h  _unistd.h  _usleep.c  azure-pipelines.yml  bcf_sr_sort.c  bgzf.c  bgzip.c  config.h.in  dirent.h  dlfcn.h  errmod.c  faidx.c  header.c  hfile.c  hfile_internal.h  hfile_libcurl.c  hfile_s3.c  hfile_s3_write.c  hts.c  hts_internal.h  hts_os.c  htsfile.c  kfunc.c  knetfile.c  kstring.c  multipart.c  plugin.c  probaln.c  realn.c  regidx.c  sam.c  ssize_t_typedef.h  synced_bcf_reader.c  (+9 more)
cram/: cram_codecs.c  cram_decode.c  cram_encode.c  cram_external.c  cram_index.c  cram_io.c  cram_samtools.c  cram_stats.c  cram_structs.h  mFILE.c  open_trace_file.c  pooled_alloc.c  rANS_static.c  string_alloc.c
htslib/: _dlfcn.c  _getopt.c  _unistd.h  bgzf.h  cram.h  faidx.h  hfile.h  hts.h  hts_defs.h  hts_log.h  hts_os.h  kfunc.h  knetfile.h  kstring.h  regidx.h  sam.h  synced_bcf_reader.h  tbx.h  thread_pool.h  vcf.h  vcf_sweep.h  vcfutils.h
install-ubuntu/lib/pkgconfig/: htslib.pc
os/: rand.c
test/: CMakeLists.txt  header_syms.pl  hfile.c  hts_endian.c  pileup.c  plugins-dlhts.c  sam.c  test-bcf-sr.c  test-bcf-translate.c  test-parse-reg.c  test-regidx.c  test-vcf-api.c  test-vcf-sweep.c  test_bgzf.c  test_index.c  test_kfunc.c  test_kstring.c  test_realn.c  test_str2int.c  test_view.c  thrash_threads1.c  thrash_threads2.c  thrash_threads3.c  thrash_threads4.c  thrash_threads5.c  thrash_threads6.c  thrash_threads7.c
test/fuzz/: hts_open_fuzzer.c
